--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,14 @@
 <div slot="root" id="root"></div>
 </body>
 <script type="module">
-    import virtualDOM from '/index.mjs'
-    import { add } from "/modules/wasm/release.js";
-    console.log('=======================', add(1, 2))
+    import { virtualDOM } from './_this/index.mjs'
+    import { add } from "/_this/wasm/welcomeBook/index.js"
+    console.log('WASM', add(1, 2))
+    console.log('WASM', virtualDOM)
     const shadow = document.body.attachShadow({mode: "open"});
     shadow.appendChild(document.body.querySelector('#root'))
-    const virtualDom = Symbol("virtualDOM");
-    let shadowRoot = await virtualDOM(virtualDom, document.body.shadowRoot)
-    shadowRoot.render(shadowRoot[virtualDom].app);
+    const virtual = Symbol("virtual");
+    const shadowRoot = await virtualDOM(virtual, document.body.shadowRoot)
+    shadowRoot.render(shadowRoot[virtual].app);
 </script>
 </html>
