add template css

--- a/_sandbox/welcomebook/src/index.html
+++ b/_sandbox/welcomebook/src/index.html
@@ -371,6 +371,7 @@
             slot="button-0"
             data-id="0"
             data-type="welcome-menu"
+
     >
         <p>Start</p>
     </fer-button>
@@ -378,6 +379,7 @@
             slot="button-1"
             data-id="1"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 1</p>
 
@@ -386,6 +388,7 @@
             slot="button-2"
             data-id="2"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 2</p>
     </fer-button>
@@ -393,6 +396,7 @@
             slot="button-3"
             data-id="3"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 3</p>
     </fer-button>
@@ -400,6 +404,7 @@
             slot="button-4"
             data-id="4"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 4</p>
     </fer-button>
@@ -407,6 +412,7 @@
             slot="button-5"
             data-id="5"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 5</p>
     </fer-button>
@@ -414,6 +420,7 @@
             slot="button-6"
             data-id="6"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 6</p>
     </fer-button>
@@ -421,6 +428,7 @@
             slot="button-7"
             data-id="7"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 7</p>
     </fer-button>
@@ -428,6 +436,7 @@
             slot="button-8"
             data-id="8"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 8</p>
     </fer-button>
@@ -435,6 +444,7 @@
             slot="button-9"
             data-id="9"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 9</p>
     </fer-button>
@@ -449,6 +459,7 @@
             slot="button-11"
             data-id="11"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>ANIMATION 11</p>
     </fer-button>
@@ -456,6 +467,7 @@
             slot="button-12"
             data-id="12"
             data-type="welcome-menu"
+            data-css-shadow="menu"
     >
         <p>Виноградник</p>
     </fer-button>
