create welcombook template

--- a/public/index.html
+++ b/public/index.html
@@ -887,7 +887,7 @@
         }
     }
 
-    let style = getComputedStyle(document.body)
+    // let style = getComputedStyle(document.body)
     // console.log('ssssssssssssssssssss', style.getPropertyValue('--main-height') )
 
     const images = template.content.querySelectorAll('img')
