--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         mountPoint: document.querySelector('.dialog'),
         CSSVariables: {
             root: {
-                '--main-height': '80vh'
+                '--main-height': '100%'
             }
         }
     }
